# kembridge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dev-ultra-fast.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  start-cache.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README-AI-RISK-ENGINE.md  README-PRICE-ORACLE.md  README-QUANTUM-CRYPTOGRAPHY.md  README.md  run_migrations.rs  simple_migrate.rs  test_api_integration.rs  test_bridge_integration.rs  test_signature.rs
backend/.sqlx/: query-028d062281eaf6f8f78b7fc331d1b556d74fa84cfbab9deebc9dd2b90240633a.json  query-03904f099d1642a45c8c44238bb6113c25add8c0f2734caed2b3ae47b094341e.json  query-055dff2e04309b8c0d3f0e28724ff208afae56131c40e89dc7d2c2e0cfb9251f.json  query-0f254fbd2daf18561ce583de64de47bf58a8936dea0c62f47c447f534d4aaba9.json  query-11ef31c060457de44226f57ce7c57a412c6db23fc1761e9afd7238a5e00d26ee.json  query-1261b584b3844b1a34bce4a9c9fd04909c0c86e0feb9ecffb61bc20e00ee3c72.json  query-1363c89f0d6def0448d9510da4dd00aaa294350fbf21563549849730fc3fa6d2.json  query-242e0b657cb050d01ac465b35713a51839a1f1c2d17b85280611630317a418bf.json  query-2887de9fd3d03efe1a7240e6197f08c779b32500b11b97a93362cdc41d06a34c.json  query-2e6537c9152b58af6b0aae28c3d1624965ab7ff9e3e4a9b11f074e853b86b036.json  query-392e25901094c27bd1e59c384401a40610da68a13ad82c51956b43e72ccceafd.json  query-3ed5383ec3a754764d912bbd015a349510150db1cca5fcd443e995721d0a53ef.json  query-3f821f12437cc0815aa05406582be51210bbe5413217188241abaa122feb5af9.json  query-412ae7dd81120e8439c46cbea74f6fb73fc9885b0db3e0f9ea661cf7aa23a1d3.json  query-432ab7ad6eefb118246f2c104fba71b86779b9ea91465101340d6773c98a0982.json  query-4b594bef7bd13ed3d037f830e484ea230d0cbebfbaae45a39c1dbf40b6144280.json  query-4bf89ab6fcd94174e113cbdb9e2f05305a5d30795020a774d5f51220d0d59c55.json  query-567fac0f1b4835fa3af6c69f2ffcd587e3743c15651196c6260dbaa34c5e7f28.json  query-59322ad8ab89a121456d231ef1eac3484f549ebcd91c56ad5e945cc17db4097e.json  query-5d8f1185f685247e91843d57ed1dc99f96d840211efd30830bb63477c468b71b.json  query-639adc3c0e9d33f67fe848f2fd3be7f450f1e018a8b554623082ed223d3f4f8f.json  query-640d2734caae523e9a819f815b429221a577bedab47edbf352d8c3462851d6b2.json  query-68599165dc58ba48a9456190fc5ff3dd9f83977ffff5917c8036cb3353084268.json  query-691cd06d1293484fda3337984cf4a417cab11456d3792ceb3924395e9b0284c4.json  query-6ecbef602badee601ad4af6fc8707855588d0245ff4ca1757c6283dbce0fa2f6.json  query-728045e2c8cd2849fd50f1d4321b799040b8e86d3dd683a88b6efd2e44323735.json  query-7331b4d0f85314d96366880968dd9372bad34bb40ca0a6b1a700636ae6d5b866.json  query-8116b60afb8e6aee681d54849f491779423690f8b28f423878533f04ae7585e9.json  query-840ea8e22dcd4dcce176c3308ff08bcd56f7653a7fad8003afda9793a48c4deb.json  query-858d0610dab7af90344811aa5a63e4a3838e79eac3e634f338650a5fe72d3454.json  query-8a88efd86ffdba747a246d73cbc30e52633eb3e3ac07a5f12651634e1d7a240f.json  query-8b8facacfe5889c2ef8f605e60b34027d05df1bb4b1e976d00ea947233a1f1ae.json  query-8caaa13193d46308e53fe34c323101efad25d2e57f93a296da4c42ac64b0df59.json  query-8ea3490064cd483d44e174c87f414273f990169fb6a79784a31ea0b3175f2ce2.json  query-92059200e0bb2502486aab772ef7ff8da0e7acc706403806f52efe5bb9d50f4a.json  query-955ef733967b175fd0f93c95a5ca86de3f02a4b26ec062baea1d6b17935f7bfc.json  query-9997a2419367bfac5817855f532ad855f15b64b810e750ce22476f42e11106a5.json  query-ae73ba5d4afe27744f8f57adf8814ae8fcb5c755fb429b2361ea3150391653ab.json  query-af2f4a831396b56aca5caaa8b2a50fe516f9f23b85e28476b24940c1702229d9.json  query-afee77e6049a610a58d2e18a4a7d579c00211f0c85e1adf7a749ca6a400aea7e.json  (+19 more)
backend/crates/kembridge-auth/: Cargo.toml
backend/crates/kembridge-blockchain/: Cargo.toml
backend/crates/kembridge-bridge/: Cargo.toml
backend/crates/kembridge-crypto/: Cargo.toml
backend/crates/kembridge-database/: Cargo.toml
backend/examples/: oneinch_api_comparison.rs  oneinch_api_endpoints_test.rs  oneinch_fusion_access_analysis.rs  oneinch_fusion_diagnosis.rs  oneinch_fusion_documentation_analysis.rs  oneinch_fusion_plus_complete.rs  oneinch_honest_integration.rs  oneinch_working_integration.rs  simple_oneinch_demo.rs
backend/migrations/: .gitkeep  001_postgresql18_extensions_config.sql  002_users_table_postgresql18.sql  003_auth_methods_oauth_postgresql18.sql  004_user_sessions_advanced_postgresql18.sql  005_quantum_keys_postgresql18.sql  006_transactions_advanced_postgresql18.sql  007_audit_logs_comprehensive_postgresql18.sql  008_risk_score_history_postgresql18.sql  009_risk_analytics_optimization_postgresql18.sql  010_manual_review_tables.sql  011_rate_limiting_tables.sql  012_rate_limiting_complete.sql
backend/src/: config.rs  constants.rs  lib.rs  main.rs  state.rs
backend/src/dynamic_pricing/: algorithm.rs  demo_scenarios.rs  exchange_rates.rs  fee_calculator.rs  impact_analyzer.rs  mod.rs  (+3 more)
backend/tests/: README.md  test_apply_migrations.rs  test_appstate_init.rs  test_appstate_minimal.rs  test_auth_http.rs  test_auth_integration.rs  test_auth_system.rs  test_bridge_integration.rs  test_database_simple.rs  test_fusion_plus_integration.rs  test_near_bridge_demo.rs  test_oneinch_api.rs  test_oneinch_honest.rs  test_price_oracle_integration.rs  test_rate_limiting.rs  test_rate_limiting.sh  test_real_bridge_network.rs  test_real_near_contract.rs  test_services_init.rs
near-contracts/: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  FUNC.md  Makefile  config.testnet.sh
near-contracts/docs/: GUIDE.md
near-contracts/scripts/: build.sh  config.testnet.sh  deploy-kembridge.sh  test-contract.sh
near-contracts/src/: lib.rs
services/: Cargo.toml  Dockerfile.dev
services/kembridge-1inch-service/: Cargo.toml  Dockerfile
services/kembridge-auth-service/: Cargo.toml
services/kembridge-blockchain-service/: Cargo.toml
services/kembridge-common/: Cargo.toml
services/kembridge-crypto/: Cargo.toml  README.md  TEST_COVERAGE_REPORT.md
services/kembridge-crypto-service/: Cargo.toml
services/kembridge-gateway/: Cargo.toml
services/kembridge-gateway-service/: Cargo.toml
(+656 files in other folders)
