[workspace]
members = [
    "crates/kembridge-auth",
    "crates/kembridge-crypto", 
    "crates/kembridge-bridge",
    "crates/kembridge-database",
    "crates/kembridge-blockchain",
]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = "0.8.0"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"

# Authentication & Crypto
jsonwebtoken = "9.3.1"
rand = "0.9.1"
sha2 = "0.10.8"
secp256k1 = "0.31.1"
ed25519-dalek = "2.1.1"

# Post-quantum cryptography
pqcrypto = "0.18.0"
pqcrypto-kyber = "0.8.0"

# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }

# Blockchain
ethers = "2.0.14"
near-sdk = "5.3.0"
near-jsonrpc-client = "0.17.0"

# Async
futures = "0.3.30"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
config = "0.15.13"
dotenvy = "0.15.7"

# Time
chrono = { version = "0.4.38", features = ["serde"] }

# UUID
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Redis
redis = { version = "0.32.3", features = ["tokio-comp"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error handling
anyhow = "1.0.86"
thiserror = "2.0.12"

# KEMBridge internal crates
kembridge-auth = { path = "crates/kembridge-auth" }
kembridge-crypto = { path = "crates/kembridge-crypto" }
kembridge-bridge = { path = "crates/kembridge-bridge" }
kembridge-database = { path = "crates/kembridge-database" }
kembridge-blockchain = { path = "crates/kembridge-blockchain" }

# Main backend binary
[package]
name = "kembridge-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kembridge-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal crates
kembridge-auth.workspace = true
kembridge-database.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# Configuration
dotenvy.workspace = true
config.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true