[workspace]
members = [
    "crates/kembridge-auth",
    "crates/kembridge-crypto", 
    "crates/kembridge-bridge",
    "crates/kembridge-database",
    "crates/kembridge-blockchain",
]
resolver = "2"

[workspace.dependencies]
# Web framework (latest stable)
axum = { version = "0.8.4", features = ["ws", "macros", "tracing"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = [
    "cors", "trace", "compression-gzip", "limit", "request-id", "sensitive-headers"
] }

# Database & Cache
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "bigdecimal"
] }
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Serialization & JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Cryptography
jsonwebtoken = "9.3.1"
sha2 = "0.10.9"
base64 = "0.22"
secp256k1 = "0.31.1"
ed25519-dalek = "2.2.0"
rand = "0.8"

# HTTP client & networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async & Concurrency
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Validation
lazy_static = "1.4"
regex = "1.7"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration & Environment
config = "0.15.13"
dotenvy = "0.15"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }

# Validation & Parsing
validator = { version = "0.20.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Monitoring & Metrics
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

# API Documentation
utoipa = { version = "5.0.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"

# Post-quantum cryptography
pqcrypto = "0.18"

# Blockchain integration
ethers = { version = "2.0.14", features = ["rustls"] }

# NEAR Protocol integration (Phase 4.2) - Minimal compatible versions
near-jsonrpc-client = "0.17"
near-crypto = "0.17"
# Use only the versions that are compatible with jsonrpc-client

# Security & Rate limiting
tower_governor = "0.4"
headers = "0.4"


# KEMBridge internal crates
kembridge-auth = { path = "crates/kembridge-auth" }
kembridge-crypto = { path = "crates/kembridge-crypto" }
kembridge-bridge = { path = "crates/kembridge-bridge" }
kembridge-database = { path = "crates/kembridge-database" }
kembridge-blockchain = { path = "crates/kembridge-blockchain" }


# Main gateway binary
[package]
name = "kembridge-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "kembridge-backend"
path = "src/main.rs"

[dependencies]
# Core framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# State management
sqlx.workspace = true
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Configuration
dotenvy.workspace = true
config.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Validation
validator.workspace = true

# Time & UUID
chrono.workspace = true
uuid.workspace = true

# Math
bigdecimal.workspace = true
rand.workspace = true

# Cryptography
sha2.workspace = true
base64.workspace = true

# Monitoring
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true

# Security
tower_governor.workspace = true
headers.workspace = true

# Internal crates
kembridge-auth.workspace = true
kembridge-database.workspace = true
kembridge-crypto.workspace = true
kembridge-bridge.workspace = true
kembridge-blockchain.workspace = true

[features]
default = ["production"]
development = ["tracing-subscriber/env-filter"]
production = ["tower-http/compression-gzip"]


# Performance optimizations for production
[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Smaller binary size
strip = true           # Strip symbols

