# KEMBridge Authentication & User Management Service
# Отвечает за Web3 аутентификацию, JWT токены и управление пользователями
[package]
name = "kembridge-auth-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "kembridge-auth-service"
path = "src/main.rs"

[dependencies]
# Web framework (minimal)
axum = { version = "0.8.4", features = ["macros", "tracing"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Simplified auth for testing - remove heavy crypto deps
base64 = "0.22"

# HTTP клиент
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Валидация
validator = { version = "0.20.0", features = ["derive"] }

# Время
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# База данных
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"
] }

# Кэширование (Redis) для сессий
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18.0"

# Конфигурация
config = "0.15.13"
dotenvy = "0.15"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Ошибки
thiserror = "2.0.12"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"

# Cryptographic utilities
rand = "0.8"
hex = "0.4"

# Rate limiting
governor = "0.6"

# Общие типы
kembridge-common = { path = "../kembridge-common" }

# Мониторинг
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

[dev-dependencies]
tokio-test = "0.4"