# KEMBridge API Gateway Service
  # Central entry point for all requests, routing between microservices
[package]
name = "kembridge-gateway-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "kembridge-gateway-service"
path = "src/main.rs"

[dependencies]
# Web framework (minimal)
axum = { version = "0.8.4", features = ["macros", "tracing", "ws"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# WebSocket support
tokio-tungstenite = "0.27.0"
futures-util = "0.3"

# HTTP client for service communication
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.0"

# Time
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"
hex = "0.4"

# Cryptography for CSRF tokens
sha2 = "0.10"
base64 = "0.22"
lazy_static = "1.4"

# Configuration
config = "0.15.13"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "2.0.12"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"

# Common types
kembridge-common = { path = "../kembridge-common" }

# Monitoring
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

# Circuit breaker for resilience  
governor = "0.10.0"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"