[package]
name = "kembridge-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum.workspace = true

# Crypto
secp256k1 = { workspace = true, features = ["recovery"] }
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true

# JWT
jsonwebtoken.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Validation
validator.workspace = true

# Additional dependencies for Web3 crypto
hex = "0.4"
bs58 = "0.5"

# Redis for nonce management
redis.workspace = true