[package]
name = "kembridge-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
kembridge-crypto.workspace = true

# Blockchain
ethers = { version = "2.0.14", features = ["rustls", "ws"] }

# NEAR Protocol dependencies (Phase 4.2) - Minimal set
near-jsonrpc-client.workspace = true
near-crypto.workspace = true
# We'll use types from jsonrpc-client to avoid version conflicts
# For Chain Signatures testing (near-workspaces will be feature-gated)
near-workspaces = { version = "0.20.1", optional = true }

# Async
tokio.workspace = true
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Crypto
secp256k1.workspace = true

# For Chain Signatures (base64 encoding)
base64 = "0.22"
hex = "0.4"

[features]
default = []
# Feature for Chain Signatures testing
chain-signatures = ["near-workspaces"]
# Feature for 1Click API integration
one-click = []