[package]
name = "kembridge-database"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx.workspace = true
redis.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Configuration
config.workspace = true