[package]
name = "kembridge-database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx.workspace = true
redis.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Precision decimal arithmetic for PostgreSQL compatibility
bigdecimal = { version = "0.4", features = ["serde"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Configuration
config.workspace = true